change the mybatis from annotation to xml